# qsoc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  flake.nix
.github/workflows/: build.yml  release.yml
doc/: README.md  flake.nix
doc/en/: about.typ  agent.typ  command.typ  config.typ  format_bus.typ  format_clock.typ  format_netlist.typ  format_power.typ  format_reset.typ  format_validation.typ  gui_bus_editor.typ  gui_module_editor.typ  main.typ  tui_image_preview.typ
resource/: qsoc.desktop  resource.qrc
resource/icons/: qsoc.rc
src/: main.cpp
src/agent/: qsocagent.cpp  qsocagent.h  qsocagentconfig.h  qsocagentdefinition.h  qsocagentdefinitionregistry.cpp  qsocagentdefinitionregistry.h  qsocawaysummary.h  qsocbashtasksource.cpp  qsocbashtasksource.h  qsoccontextrestore.cpp  qsoccontextrestore.h  qsocfilehistory.cpp  qsocfilehistory.h  qsocfilereadstate.h  qsocgoal.cpp  qsocgoal.h  qsocgoalprompt.cpp  qsocgoalprompt.h  qsochistoryorder.h  qsochookmanager.cpp  qsochookmanager.h  qsochookrunner.cpp  qsochookrunner.h  qsochooktypes.cpp  qsochooktypes.h  qsoclooptasksource.cpp  qsoclooptasksource.h  qsocmemorydream.cpp  qsocmemorydream.h  qsocmemoryextractor.cpp  qsocmemoryextractor.h  qsocmemorymanager.cpp  qsocmemorymanager.h  qsocmemoryrecall.cpp  qsocmemoryrecall.h  qsocsession.cpp  qsocsession.h  qsocsessionrecovery.cpp  qsocsessionrecovery.h  qsocsessiontitle.h  (+9 more)
src/agent/mcp/: qsocmcpclient.cpp  qsocmcpclient.h  qsocmcphttp.cpp  qsocmcphttp.h  qsocmcpjson_p.h  qsocmcpmanager.cpp  qsocmcpmanager.h  qsocmcpstdio.cpp  qsocmcpstdio.h  qsocmcpstdioparser_p.h  qsocmcptool.cpp  qsocmcptool.h  qsocmcptransport.cpp  qsocmcptransport.h  qsocmcptypes.cpp  qsocmcptypes.h
src/agent/remote/: qsocagentremote.cpp  qsocagentremote.h  qsochostprofile.cpp  qsochostprofile.h  qsoclibssh2init.cpp  qsoclibssh2init.h  qsocremotebinding.cpp  qsocremotebinding.h  qsocremotepathcontext.cpp  qsocremotepathcontext.h  qsocsftpclient.cpp  qsocsftpclient.h  qsocsshconfigparser.cpp  qsocsshconfigparser.h  qsocsshexec.cpp  qsocsshexec.h  qsocsshhostconfig.h  qsocsshpubderive.cpp  qsocsshpubderive.h  qsocsshsession.cpp  qsocsshsession.h  qsoctoolremote.cpp  qsoctoolremote.h
src/agent/tool/: qsoctoolagent.cpp  qsoctoolagent.h  qsoctoolagentresume.cpp  qsoctoolagentresume.h  qsoctoolagentstatus.cpp  qsoctoolagentstatus.h  qsoctoolaskuser.cpp  qsoctoolaskuser.h  (+36 more)
src/cli/: qagentcompletion.cpp  qagentcompletion.h  qagentescmonitor.cpp  qagentescmonitor.h  qagenthistorysearch.cpp  qagenthistorysearch.h  qagentinputmonitor.cpp  qagentinputmonitor.h  qagentreadline.cpp  qagentreadline.h  qagentstatusline.cpp  qagentstatusline.h  qsoccliparseagent.cpp  qsoccliparsebus.cpp  qsoccliparsegenerate.cpp  qsoccliparsemodule.cpp  qsoccliparsemodulebus.cpp  qsoccliparseproject.cpp  qsoccliworker.cpp  qsoccliworker.h  qsocexternaleditor.cpp  qsocexternaleditor.h  qsocloopscheduler.cpp  qsocloopscheduler.h  qsocpredictioncontroller.cpp  qsocpredictioncontroller.h  qsocsessiontranscript.cpp  qsocsessiontranscript.h  qterminalcapability.cpp  qterminalcapability.h
src/common/: config.h  qllmservice.cpp  qllmservice.h  qlongtaskmonitor.cpp  qlongtaskmonitor.h  qlspbackend.h  qlspconfigloader.cpp  qlspconfigloader.h  qlspprocessbackend.cpp  qlspprocessbackend.h  qlspservice.cpp  qlspservice.h  qlspslangbackend.cpp  qlspslangbackend.h  qslangdriver.cpp  qslangdriver.h  qsocbusmanager.cpp  qsocbusmanager.h  qsoccodehighlighter.cpp  qsoccodehighlighter.h  qsocconfig.cpp  qsocconfig.h  qsocconsole.cpp  qsocconsole.h  qsoccron.cpp  qsoccron.h  qsocgeneratemanager.h  qsocgeneratenetlist.cpp  qsocgenerateprimitiveclock.cpp  qsocgenerateprimitiveclock.h  qsocgenerateprimitivecomb.cpp  qsocgenerateprimitivefsm.cpp  qsocgenerateprimitivepower.cpp  qsocgenerateprimitivepower.h  qsocgenerateprimitivereset.cpp  qsocgenerateprimitivereset.h  qsocgenerateprimitiveseq.cpp  qsocgeneratestub.cpp  qsocgeneratetemplate.cpp  qsocgenerateverilog.cpp  (+25 more)
src/tui/: qtuiassistanttextblock.cpp  qtuiassistanttextblock.h  qtuiblock.cpp  qtuiblock.h  qtuichipbanner.cpp  qtuichipbanner.h  qtuicodeblock.cpp  qtuicodeblock.h  qtuicompletionpopup.cpp  qtuicompletionpopup.h  qtuicompositor.cpp  qtuicompositor.h  qtuidiffblock.cpp  qtuidiffblock.h  qtuiimagepreviewblock.cpp  qtuiimagepreviewblock.h  qtuiinputline.cpp  qtuiinputline.h  qtuilineinput.cpp  qtuilineinput.h  qtuimenu.cpp  qtuimenu.h  qtuipathpicker.cpp  qtuipathpicker.h  qtuiqueuedlist.cpp  qtuiqueuedlist.h  qtuiscreen.cpp  qtuiscreen.h  qtuiscrollview.cpp  qtuiscrollview.h  qtuisecretprompt.cpp  qtuisecretprompt.h  qtuistatusbar.cpp  qtuistatusbar.h  qtuitaskoverlay.cpp  qtuitaskoverlay.h  qtuitextlayout.cpp  qtuitextlayout.h  qtuitodoblock.cpp  qtuitodoblock.h  (+8 more)
test/: CMakeLists.txt  qsoc_mcp_stdio_peer.cpp  qsoc_test.h  qsocmcp_fake_transport.h  test_qllmserviceclone.cpp  test_qllmservicemodalities.cpp  test_qlongtaskmonitor.cpp  test_qlspservice.cpp  test_qlspslangbackend.cpp  test_qsocagentattachment.cpp  test_qsocagentbackoffabort.cpp  test_qsocagentcompact.cpp  test_qsocagentcompletion.cpp  test_qsocagentdefinitionregistry.cpp  test_qsocagentescmonitor.cpp  test_qsocagenthistorysearch.cpp  test_qsocagentinputmonitor.cpp  test_qsocagentreminders.cpp  test_qsocagentsubagentguards.cpp  test_qsocagenttool.cpp  test_qsocagenttoolshell.cpp  test_qsocagenttoolskill.cpp  test_qsocagenttoolweb.cpp  test_qsocawaysummary.cpp  test_qsocbusmanagerphase0.cpp  test_qsoccliparsebus.cpp  test_qsoccliparsegenerate.cpp  test_qsoccliparsegenerateclocklogic.cpp  test_qsoccliparsegeneratecomblogic.cpp  test_qsoccliparsegeneratefsmlogic.cpp  test_qsoccliparsegeneratemerge.cpp  test_qsoccliparsegeneratemultidriverguard.cpp  test_qsoccliparsegeneratepowerlogic.cpp  test_qsoccliparsegeneratereportunconnected.cpp  test_qsoccliparsegenerateresetlogic.cpp  test_qsoccliparsegenerateseqlogic.cpp  test_qsoccliparsegeneratestub.cpp  test_qsoccliparsegeneratetemplate.cpp  test_qsoccliparsegeneratetemplatercsv.cpp  test_qsoccliparsegeneratetemplaterdl.cpp  (+101 more)
ui/: mainwindow.ui  prcwindow.ui  schematicwindow.ui
(+78 files in other folders)
